--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Implementasi Nilai Bela Negara dalam Teknik Sipil</h1>
-        <p>Abraham Setiawan Urliano | NIM: 2335010025 | Kelas: Bela Negara G176</p>
+        <p>Abraham Setiawan Urliano | NPM: 23035010025 | Kelas: Bela Negara G176</p>
     </header>
 
     <!-- Pendahuluan -->
